<resources>
    <string name="app_name">Aprendamos Astronomia</string>
    <string name="appMenuTitle">Let\'s learn astronomy</string>
    <string name="VolverBtn">Previous</string>
    <string name="SeguirBtn">Next</string>
    <string name="GaleriaBtn">Gallery</string>
    <string name="SisSolarMenu">The solar system</string>
    <string name="PlanetasMenu">The planets</string>
    <string name="SatelitesMenu">The largest satellites in the solar system</string>
    <string name="ElSolMenu">The Sun</string>
    <string name="LunaMenu">The Moon</string>
    <string name="EstrellasMenu">The stars</string>
    <string name="ConstelaMenu">Constellations</string>
    <string name="NavesMenu">Spaceships</string>
    <string name="GalaxiaMenu">The Galaxies</string>
    <string name="juegosMenu">¡Play now!</string>
    <string name="juego1">Which planet is this?</string>
    <string name="juego2">Moon Phases</string>
    <string name="juego3">What type of galaxy is this?</string>
    <string name="juego4">Sorts planets</string>
    <string name="tituloSistemaSol"> The solar system</string>
    <string name="queEsSistemaSol"> What is the Solar System?</string>
    <string name="sistemaSolInfo">The Solar System is the Sun and everything that revolves in orbit around it. This includes the eight planets and their moons, asteroids and
                                    numerous comets. All are held in orbit around the Sun by the strong gravity force from the sun.
    </string>
    <string name="tituloPlanetas">The planets</string>
    <string name="introPlanetas">In the solar system there are 8 planets; our planet is Earth, next to it there are seven more planets:
    </string>
    <string name="tituloMercurio">Mercury</string>
    <string name="mercurioInfo">Mercury is the smallest planet in the Solar System (excluding Pluto), and is as well the closest to the Sun. The surface of this planet is much like the "seas" of our Moon,
                                being also very abundant in craters. It has begun to be studied in detail since the beginning of the century. Mercury can be seen with the naked eye, but sometimes you may
                                need binoculars to observe it.
    </string>
    <string name="tituloVenus">Venus</string>
    <string name="venusInfo">The second planet, Venus, is well known for glowing at dawn or dusk, a feature that has earned it the nickname "bright star".
                                It\'s a beautiful planet to observe with the naked eye. If you have a telescope and you get to locate it, you will find that Venus can get to show phases like the Moon.
                                This curious phenomenon is because the planet is closer to the Sun than the Earth; so the sunlight illuminates it from different angles.
                                The temperature of Venus is higher than Mercury, even though it is farther from the sun. An astronomer named Carl Sagan discovered the cause of this mystery, and so  we got to know that
                                this is due to the presence of gases in the atmosphere, causing Venus a large greenhouse effect, retaining the heat it receives from the sun.
    </string>
    <string name="tituloTierra">The earth</string>
    <string name="tierraInfo">The earth is a big ball of rock, slightly flattened at the poles, that goes around the Sun in 365 days and almost 6 hours.
                                More than 70% of the earth\'s surface is covered by oceans of liquid water. The Earth is inhabited by millions and millions of living beings and is the site from which we are beginning to
                                know the universe as it is.
                                Only astronauts have managed to see Earth from space, some from orbit, hundreds of kilometers away, and others from the moon, hundreds of thousands of kilometers away.
    </string>
    <string name="tituloMarte">Mars</string>
    <string name="marteInfo">Mars is farther from the sun than Earth, which makes it cooler. Mars has huge volcanoes, one of them, Mount Olympus, is the largest in
                                the entire solar system. It is frozen on its surface and contains underground water, as demonstrated by the Phoenix robot. In the future we might find life on this planet.
                                Mars is clearly visible to the naked eye.
    </string>
    <string name="tituloJupiter">Jupiter</string>
    <string name="jupiterInfo">Jupiter is as huge as 1,321 Earths. Although the Sun is much larger, of course, as 984 times bigger than Jupiter. It is a gas planet (The Gas Giant) and is capable of emitting radio
                                waves. Jupiter\'s atmosphere is of enormous complexity, and its study may help us understand better how atmospheric phenomena on Earth and the famous climate
                                change occur. In the atmosphere of Jupiter, storms and anticyclones larger than the whole planet Earth take place, with winds reaching speeds of unimaginable magnitude.
                                It is accompanied by more than 60 satellites, the most known Io, Europa, Ganymede and Callisto, being the four visible with some binoculars from the Earth. Jupiter is
                                perfectly visible to the naked eye.
    </string>
    <string name="tituloSaturno">Saturn</string>
    <string name="saturnoInfo">Saturn always catches everyone\'s attention because of that imposing ring around it. In fact it is not a single ring, they are several. These rings are
                                composed of millions of pieces of ice, some as big as a building, and others tiny, like a speck of dust. If you are able to find Saturn in the sky (it is observable
                                to the naked eye) and then you equip yourself with a telescope, you will see one of the greatest wonders of nature: the rings of Saturn. Saturn is not the only planet with rings,
                                but it is the one with the most beautiful ones. All gas planets have rings, although it is very difficult to see them. \nAnd one last curiosity: composed mainly of gas
                                and being as large compared to its mass, Saturn would float in the sea, assuming it could fit , of course.
    </string>
    <string name="tituloUrano">Uranus</string>
    <string name="uranoInfo">Uranus is the first planet discovered with a telescope, by musician and astronomer William Herschel in 1781, although it is true that
                                you can see it with the naked eye and certain African tribes had observed it long before him. \nAll the planets revolve around an axis, and all axes of all the planets are
                                slightly inclined, but the planet with the axis of rotation most tilted is Uranus, with almost 98 °.
    </string>
    <string name="tituloNeptuno">Neptune</string>
    <string name="neptunoInfo">Neptune glows with a beautiful deep blue color and was the first planet discovered with mathematics. It was precisely Le Verrier the one who indicated
                                through his mathematical calculations, what would its position be in the sky, so that astronomer Galle discovered the planet in 1846 with a telescope. In all gas
                                planets there are winds of unusual strength, and in Neptune, like Jupiter, storms the size of whole planets are formed. Scientists believe that Neptune could have changed
                                its position countless times with Uranus million years ago, so it may not have always been the farthest planet from the Sun.
    </string>
    <string name="tituloSatelitesSistema">The largest satellites in the solar system</string>
    <string name="introSatelitesSistema">The 6 largest satellites in the solar system </string>
    <string name="tituloSatelite1">Ganymede</string>
    <string name="introSatelite1">Radius: 2631 km \nPlanet: Jupiter</string>
    <string name="satelite1Info">It is one of the Jovian moons or Galileans from Jupiter and is the largest in the solar system.
                                Its name comes from a beautiful Trojan prince, son of the eponymous Tros (or Laomedonte); Ganymede became the lover of
                                Zeus and the cupbearer of the gods. On the etymology of its name; Robert Graves (The Greek Myths) proposes: ganuesthai + medea, "rejoicing in virility".
                                This name was popularized from the mid-twentieth century.

    </string>
    <string name="tituloSatelite2">Titan</string>
    <string name="introSatelite2">Radius: 2575Km  \nPlanet: Saturn </string>
    <string name="satelite2Info">It is the largest satellite of Saturn and is easily visible with amateur telescopes.
                                The name "Titan" and the other seven Saturn satellites known by John Herschel (son of William Herschel)
                                comes from its publication in 1847 of his observations on Saturn he suggested the names of the Titans, sisters and brothers of Cronos
                                ( the Greek name for the Roman god of time Saturn) as a more effective method for naming the satellites of Saturn hitherto designated by Roman numerals in
                                the order of proximity to the planet.
    </string>
    <string name="tituloSatelite3">Callisto</string>
    <string name="introSatelite3">Radius: 2400 Km \nPlanet: Jupiter</string>
    <string name="satelite3Info">The satellite is named after one of the many lovers of Zeus, according to Greek mythology, where Callisto was a nymph (or, according to other sources,
                                daughter of Lycaon) who was associated with the goddess of hunting Artemis. The name was proposed by astronomer Simon Marius soon after the discovery of the satellite.
                                Marius attributed the suggestion to Johannes Kepler. However, the names of the Galilean satellites fell into disuse for a considerable time and not again extended their use
                                until the mid-twentieth century. In much of the relatively recent astronomical literature, Callisto is quoted by Roman numeral designation, Jupiter IV, a system introduced
                                by Galileo, or as the "fourth satellite of Jupiter"
    </string>
    <string name="tituloSatelite4">Io</string>
    <string name="introSatelite4">Radius: 1815 Km \nPlanet: Jupiter</string>
    <string name="satelite4Info">It is the third Jovian or Galilean moon of Jupiter.
                                Named Io, one of the many maidens with whom Zeus fell in love in Greek mythology.
    </string>
    <string name="tituloSatelite5">The moon</string>
    <string name="introSatelite5">Radius: 1738 km \nPlanet: Earth</string>
    <string name="satelite5Info">It is the largest satellite in the Solar System relative to the size of its planet, a quarter the diameter of Earth and 1/81 its mass; and is the second densest satellite after Io.
                                It is in a synchronous relationship with the Earth, always showing the same face to Earth. The visible hemisphere
                                is marked with dark volcanic lunar maria among the bright ancient mountains.
    </string>
    <string name="tituloSatelite6">Europa</string>
    <string name="introSatelite6">Radius: 1569Km \nPlanet: Jupiter</string>
</resources>