<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.callejas.cesar.aprendamosastronomia.MainActivity"
    android:background="@color/primary_dark"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/mainLogo"
                android:src="@drawable/astronauta1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/mainTitle"
                android:layout_below="@id/mainLogo"
                android:text="@string/appMenuTitle"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/mainTitle"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    style="@style/BtnMenu"
                    android:onClick="sistemaSolar"
                    android:text="@string/SisSolarMenu"
                    />

                <Button
                    style="@style/BtnMenu"
                    android:onClick="losPlanetas"
                    android:text="@string/PlanetasMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="satelitesGrandes"
                    android:text="@string/SatelitesMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="elSol"
                    android:text="@string/ElSolMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="laLuna"
                    android:text="@string/LunaMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="lasEstrellas"
                    android:text="@string/EstrellasMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="constelaciones"
                    android:text="@string/ConstelaMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="navesEsp"
                    android:text="@string/NavesMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="galaxias"
                    android:text="@string/GalaxiaMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="startGamesMenu"
                    android:text="@string/juegosMenu"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="startVideoMenu"
                    android:text="Videos Informativos"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
