<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.callejas.cesar.aprendamosastronomia.MainActivity"
    android:background="@color/primary_dark"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/mainLogo"
                android:src="@drawable/juegosmenu"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/mainTitle"
                android:layout_below="@id/mainLogo"
                android:text="@string/juegosMenu"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/mainTitle"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    style="@style/BtnMenu"
                    android:onClick="game1"
                    android:text="@string/juego1"
                    />

                <Button
                    style="@style/BtnMenu"
                    android:onClick="game2"
                    android:text="@string/juego2"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="game3"
                    android:text="@string/juego3"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="game4"
                    android:text="@string/juego4"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="game5"
                    android:text="Aventura Espacial"/>

                <Button
                    style="@style/BtnMenu"
                    android:onClick="scores"
                    android:text="Puntajes"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>